# sifir-rs-sdk

./: .gitignore  README.md  build-android.sh  build-ios.sh  build-macos.sh  flake.nix
sifir-android/src/ffi/: java_glue.rs
sifir-ios/: Cargo.toml
sifir-ios/src/tor_ffi/: mod.rs
tor/: Cargo.toml
tor/src/: lib.rs
tor/src/hidden_service/: mod.rs
tor/src/tcp_stream/: mod.rs
