[package]
name = "sifir-ios"
version = "0.1.0"
authors = ["Gus Abidi <gabidi@gmail.com>"]
edition = "2018"

[dependencies]
tor = { path = "../tor" }
logger = { path = "../logger" }
libc = "0.2.80"
serde = { version="1.0.217", features = ["derive"]}
serde_json = "1.0.138"
base64 = "0.22.1"

[build-dependencies]
cbindgen = "0.28.0"
cargo-lipo = "3.3.1"

[lib]
crate-type = ["staticlib"]
#crate-type = ["cdylib"]
