[package]
name = "tor"
version = "0.1.0"
authors = ["Gus Abidi <gabidi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1.4", features = ["net","rt","process","rt-multi-thread","time","sync"] }
logger = { path = "../logger" }
libtor = { git = "https://github.com/niteshbalusu11/libtor", branch = "master", features=["vendored-openssl"] }
torut = { version = "0.1.9", features=["control","v3","vendored_openssl"] }
anyhow = "1.0.95"
serde = { version="1.0.217", features = ["derive"]}
serde_json = "1.0.138"
lazy_static = "1.5.0"
futures = { version="0.3.31", default-features = false}
socks = { version = "0.3.4"}
base64 = "0.22.1"
thiserror = "1.0.24"
num_cpus = "1.0"
tokio-compat-02 = "0.2"
httparse = "1.10.0"

[dev-dependencies]
serial_test = "*"
utils = { path = "../utils" }


[[example]]
name = "hs_bind"
#required-features = ["cli-utils", "esplora"]
#[lib]
#crate-type = ["staticlib", "cdylib"]
#crate-type = ["lib", "cdylib"]
